# parallel-event-emitter

./: .gitignore  Cargo.toml  README.md
examples/: custom_events.rs  simple.rs
src/: error.rs  lib.rs
