[package]
name = "parallel-event-emitter"
authors = ["Aaron Trent <novacrazy@gmail.com>"]
description = "Parallel Event Emitter for concurrent listener invocation based on futures-rs and futures-cpupool"
repository = "https://github.com/novacrazy/parallel-event-emitter"
readme = "README.md"
version = "0.2.4"
license = "MIT"
keywords = ["event", "emitter", "parallel", "futures"]
categories = ["concurrency"]
documentation = "https://docs.rs/parallel-event-emitter/"

[dependencies]
fnv = "1.0.5"
futures = "0.1.8"
futures-cpupool = "0.1.2"
trace-error = "0.1.3"

[dev-dependencies]
thread-id = "3.0.0"

[features]
default = []
integer_atomics = []
conservative_impl_trait = []
